<resources>
    <string name="app_name">GestureGuide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="agree">Agree</string>
    <string name="stud_info">Student\'s Information</string>
    <string name="teacher_info">Teacher\'s Information</string>
    <string name="security">Security Settings</string>
    <string name="home">Home</string>

    <string name="account">Information Settings</string>
    <string name="acc_settings">Account Settings</string>
    <string name="change_pass">Change Password</string>
    <string name="quiz_record">Records of Quiz</string>
    <string name="lesson_record">Records of Lesson</string>
    <string name="records">Records</string>
    <string name="study">Study</string>

    <string name="learningMaterials">Learning Materials</string>

    <string name="learn">Learn</string>
    <string name="learned">Learned</string>

    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="alphabet">Alphabet</string>
    <string name="pic">Pic</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>

    <string name="activity">Activity</string>
    <string name="quiz">Quiz</string>
    <string name="check">Check</string>
    <string name="finish">Finish</string>

    <string name="profilePic">Select Profile Picture</string>


    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="middle">Middle Name</string>
    <string name="m.i">M.I</string>
    <string name="ext">Jr.</string>
    <string name="birthday">Birthday</string>
    <string name="contact">Number</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="username">Username</string>
    <string name="lrn">LRN</string>

    <string name="content">Contents</string>

    <string-array name="user_type_options">
        <item>User</item>
        <item>Student</item>
    </string-array>

</resources>