<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FakeGray"
    android:fitsSystemWindows="true"
    tools:context=".ProfileFragment"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/side_menu" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="SignupTabFragment">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FakeGray">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/FakeGray"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/change_email"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_bkg"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/change_pass"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bkg"
            android:hint="@string/pass"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/change_confirm"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bkg"
            android:hint="@string/confirm"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>